# trading-system

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  run_backtest.py  run_live.py  run_paper.py
.github/workflows/: ci.yml
config/: live_trading.yaml.example  symbols.txt
deploy/: DEPLOYMENT.md  install.sh  trading-system.env.example  trading-system.service  uninstall.sh
deploy/monitoring/: health_server.py
deploy/scripts/: health-check.sh  notify-failure.sh  send-email.sh
deploy/systemd/: trading-system-health.service  trading-system-notify.service  trading-system.service
docs/: ALPHA-STRATEGY.md  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md  TUTORIAL.md  gateway.md  logger.md  spec.md
docs/notes/: pipeline.md
docs/specs/: assignment_9_mini_trading_system.md  end_to_end_trading_system.md  phase1_mini_trading_system.md  phase2_end_to_end_trading_system.md
examples/: README.md  alpha_backtest.py  crypto_backtest.py  crypto_dryrun.py  crypto_paper.py  run_all_tests.py  stock_backtest.py  stock_dryrun.py
examples/features/: WINDOWS_DESIGN.md  windows_explanation.py
logs/: app.jsonl  backtester.jsonl  data.jsonl  gateway.jsonl  orders.jsonl
scripts/: fetch_historical.py
src/: models.py  msg_parser.py  order.py  portfolio.py  risk_engine.py  utils.py
src/analytics/: README.md  __init__.py  analyzer.py  metrics.py  report.py  visualizer.py
src/backtester/: README.md  __init__.py  backtest_engine.py  costs.py  equity_tracker.py  execution.py  matching_engine.py  position_sizer.py  recorder.py  trade_tracker.py
src/config/: README.md  __init__.py  alpha_config.py  fix.cfg  trading_config.py
src/data/: preprocessing.py
src/data_loader/: README.md  preprocessing.py  storage.py
src/execution/: README.md  __init__.py  aggressive_handler.py  execution_monitor.py  matching.py  order.py  orderbook.py  rate_limited_queue.py  rebalancing_plan.py  risk_engine.py  tmp.py  twap_executor.py
src/gateway/: README.md  __init__.py  alpaca_data_gateway.py  alpaca_trading_gateway.py  coinbase_data_gateway.py  finnhub_data_gateway.py  historical_gateway.py  order_gateway.py
src/live/: README.md  __init__.py  live_engine.py
src/loader/: preprocessing.py
src/logger/: README.md  log_config.json  logger.py
src/order_manager/: order.py
src/orders/: README.md  matching.py  matching_engine.py  order.py  order_book.py  order_manager.py  tmp.py  (+3 more)
tests/: test_alpaca_data_gateway.py  test_alpaca_trading_gateway.py  test_alpha_strategy.py  test_alpha_weights.py  test_backtest_integration.py  test_config.py  test_feature_calculator.py  test_macd_strategy.py  test_order_gateway.py  test_order_validator.py  test_portfolio.py  test_position_sizers.py  test_rebalancing_execution.py  test_risk_manager.py  test_storage.py
tutorial/: macd_strategy_walkthrough.ipynb
(+27 files in other folders)
