[project]
name = "trading-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alpaca>=1.0.0",
    "alpaca-py>=0.43.2",
    "binance>=0.3.88",
    "cryptography>=46.0.3",
    "databento>=0.66.0",
    "dotenv>=0.9.9",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "polars>=1.35.2",
    "pytest>=9.0.1",
    "pytz>=2025.2",
    "quickfix>=1.15.1",
    "requests>=2.32.5",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "yfinance>=0.2.66",
]

[tool.hatchling.build.targets.wheel]
packages = ["src/trader", "src/logger", "src/analytics"]

[tool.uv]
package = true

[tool.uv.sources]
quickfix = { path = "dependency/quickfix-1.15.1/dist/quickfix-1.15.1-cp313-cp313-macosx_10_13_universal2.whl" }
