[project]
name = "trading-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alpaca-py>=0.43.2",
    "binance>=0.3.88",
    "cryptography>=46.0.3",
    "databento>=0.66.0",
    "dotenv>=0.9.9",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "polars>=1.35.2",
    "pytest>=9.0.1",
    "pytest-cov>=4.1.0",
    "pytz>=2025.2",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "websockets>=14.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pyright>=1.1.390",
    "bandit>=1.7.0",
]
fix = [
    "quickfix>=1.15.1",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (require API credentials)",
]

[tool.hatchling.build.targets.wheel]
packages = ["src/trader", "src/logger", "src/analytics"]

[tool.uv]
package = true

# quickfix local wheel (macOS only, for FIX protocol support)
# Install with: uv sync --extra fix
# [tool.uv.sources]
# quickfix = { path = "dependency/quickfix-1.15.1/dist/quickfix-1.15.1-cp313-cp313-macosx_10_13_universal2.whl" }
